[package]
name = "rust-spoa"
version = "0.1.0"
authors = ["Peter Edge <edge.peterj@gmail.com>"]
edition = "2018"
license = "MIT"
description = "This library wraps the C++ SPOA library, providing a Rust API for generating DNA and protein consensus sequences."

[dependencies]

[build-dependencies]
cc = "1.0"
cmake = "0.1"
